syntax = "proto3";

option go_package = "github.com/PasanovicHalid/XWS_Project/BookingService/SharedLibraries/gRPC/user";

package user;

import "google/api/annotations.proto";
import "common/common.proto";

service UserService {
    rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse) {
        option (google.api.http) = {
            get: "/api/user/getUserById/{id}"
        };
    }
    rpc GetUserByEmail (GetUserByEmailRequest) returns (GetUserByEmailResponse) {
        option (google.api.http) = {
            get: "/api/user/getUserByEmail/{email}"
        };
    }
    rpc GetUserByPhoneNumber (GetUserByPhoneNumberRequest) returns (GetUserByPhoneNumberResponse) {
        option (google.api.http) = {
            get: "/api/user/getUserByPhoneNumber/{phoneNumber}"
        };
    }
    rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse) {
        option (google.api.http) = {
            get: "/api/user/getAllUsers"
        };
    }
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {
        option (google.api.http) = {
            put: "/api/user/updateUser"
            body: "*"
        };
    }
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/api/user/createUser"
            body: "*"
        };
    }

    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {
        option (google.api.http) = {
            delete: "/api/user/deleteUser/{id}"
        };
    }
}

message User {
    string identityId = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    string phoneNumber = 5;
    string address = 6;
}

message GetUserByIdRequest {
    string id = 1;
}

message GetUserByIdResponse {
    common.RequestResult requestResult = 1;
    User user = 2;
}

message GetUserByEmailRequest {
    string email = 1;
}

message GetUserByEmailResponse {
    common.RequestResult requestResult = 1;
    User user = 2;
}

message GetUserByPhoneNumberRequest {
    string phoneNumber = 1;
}

message GetUserByPhoneNumberResponse {
    common.RequestResult requestResult = 1;
    User user = 2;
}

message GetAllUsersRequest {
    int32 page = 1;
    int32 size = 2;
}

message GetAllUsersResponse {
    common.RequestResult requestResult = 1;
    repeated User users = 2;
}

message UpdateUserRequest {
    string identityId = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    string phoneNumber = 5;
    string address = 6;
}

message UpdateUserResponse {
    common.RequestResult requestResult = 1;
}

message CreateUserRequest {
    string identityId = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    string phoneNumber = 5;
    string address = 6;
}

message CreateUserResponse {
    common.RequestResult requestResult = 1;
}

message DeleteUserRequest {
    string identityId = 1;
}

message DeleteUserResponse {
    common.RequestResult requestResult = 1;
}